# DOBRO_LOADER

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli_downloader.py  downloader_logic.py  index.html  kinescope-dl.py  main.py  main.spec  pyproject.toml  requirements.txt
kinescope/: downloader.py
